--- a/Client/package.json
+++ b/Client/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@types/xml2json": "^0.11.3",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
     "vue-class-component": "^7.2.2",
-    "vue-property-decorator": "^8.3.0"
+    "vue-property-decorator": "^8.3.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
