--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "@quasar/extras": "^1.0.0",
     "@types/xml2json": "^0.11.3",
     "core-js": "^3.6.5",
+    "jsstore": "^3.11.4",
     "quasar": "^1.0.0",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
