Added vue and ts sample

--- a/Server/package.json
+++ b/Server/package.json
@@ -1,22 +1,31 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-vue-typescript-starter",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
+  "description": "An Electron starter that supports VueJS + TypeScript.",
+  "main": "src/main.ts",
+  "dependencies": {
+    "electron-compile": "^6.4.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "vue": "^2.4.4",
+    "vueify": "^9.4.1",
+    "electron-devtools-installer": "^2.2.0"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^11.2.3"
+    "@types/electron-devtools-installer": "^2.0.2",
+    "electron-forge": "^4.0.2",
+    "electron": "1.7.6",
+    "electron-prebuilt-compile": "1.7.6",
+    "tslint": "^5.7.0",
+    "typescript": "^2.5.2"
+  },
+  "scripts": {
+    "start": "node_modules/.bin/electron .",
+    "lint": "node_modules/.bin/tslint --project tsconfig.json --type-check --force",
+    "make": "node_modules/.bin/electron-forge make"
+  },
+  "author": "Brandon DeRosier",
+  "license": "MIT",
+  "config": {
+    "forge": "./forge.config.js"
   }
 }
