--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,26 +1,15 @@
 {
-    "compilerOptions": {
-        "removeComments": false,
-        "preserveConstEnums": true,
-        "sourceMap": true,
-        "declaration": true,
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "strictNullChecks": true,
-        "noUnusedLocals": true,
-        "noImplicitThis": true,
-        "noUnusedParameters": true,
-        "importHelpers": true,
-        "noEmitHelpers": true,
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "pretty": true,
-        "target": "es2015",
-        "typeRoots": ["./types"]
-    },
-    "formatCodeOptions": {
-        "indentSize": 4,
-        "tabSize": 4
+  "compilerOptions": {
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*"]
     }
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
