--- a/Server/package.json
+++ b/Server/package.json
@@ -22,9 +22,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
     "electron": "^9.4.0",
-    "typescript": "^3.9.5"
+    "eslint": "^7.3.1",
+    "typescript": "^3.9.5",
+    "webpack-cli": "^4.5.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ts-loader": "^8.0.17"
+  }
 }
