--- a/Server/package.json
+++ b/Server/package.json
@@ -28,6 +28,9 @@
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "ts-loader": "^8.0.17"
   }
 }
