--- a/Server/package.json
+++ b/Server/package.json
@@ -24,8 +24,7 @@
     "@typescript-eslint/parser": "^3.4.0",
     "electron": "^9.4.0",
     "eslint": "^7.3.1",
-    "typescript": "^3.9.5",
-    "webpack-cli": "^4.5.0"
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
