--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitAny": true,
+    "esModuleInterop": true,
     "sourceMap": true,
+    "skipLibCheck": true,
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
