--- a/Server/package.json
+++ b/Server/package.json
@@ -34,5 +34,16 @@
     "popper.js": "^1.16.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "@types/node": "^14.14.27",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "bootstrap": "^4.6.0",
+    "eslint": "^7.19.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.5"
   }
 }
